<resources>
    <string name="app_name">Shopping</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="show">show</string>
    <string name="closed_shopping_list">This shopping list is not closed</string>
    <string name="open_shopping_list">This shopping list is closed</string>
    <string name="edit_completed">Close this list</string>
    <string name="submit_form">Submit</string>
    <string name="no_item">this list is empty, create a new item</string>
    <string name="my_shopping_list">My shopping list</string>
    <string name="welcome">Welcome</string>
    <string name="about">About</string>
    <string name="info">This is a shopping list application developed by Albert Nguyen, Gaël Graffion, Jordan Croisic, Yoann Keoxay</string>
    <!-- Strings related to login -->
    <string name="switch_auth">I don\'t have an account yet</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="disconnect">Disconnect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
