<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esgi.ykeoxay.shopping.Fragment.RegisterFragment">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/prompt_email"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:inputType="textLongMessage"
            android:layout_width="wrap_content">
        </EditText>

        <EditText
            android:id="@+id/firstname"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/prompt_firstname"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:inputType="textLongMessage"
            android:layout_width="wrap_content">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:layout_width="wrap_content">
        </EditText>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/button_margin"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/action_register"/>
    </LinearLayout>

</FrameLayout>
