<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esgi.ykeoxay.shopping.Fragment.EditShoppingListFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_shopping_list_name"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/name"
            android:inputType="textLongMessage"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:layout_width="wrap_content">
        </EditText>

        <CheckBox android:id="@+id/edit_shopping_list_completed"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/container"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_completed"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/submit_form"/>
    </LinearLayout>

</FrameLayout>
