<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_alignBottom="@id/drawer_layout"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    android:padding="15dp"
    android:background="@color/dark"
    android:layout_width="wrap_content">
        <TextView
            android:id="@+id/shopping_list_name"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="@dimen/bold"
            android:layout_width="200dp"/>
        <TextView
            android:id="@+id/shopping_list_completed_label"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/gray"
            android:layout_width="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true" />
        <TextView
            android:id="@+id/shopping_list_completed"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:layout_width="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:padding="5dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <Button
                android:id="@+id/show_shopping_list"
                android:layout_gravity="center_vertical|right"
                android:text="@string/show"
                android:width="50dp"
                android:layout_margin="@dimen/fab_margin"
                android:layout_height="wrap_content"
                android:allowUndo="false"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="70dp"/>
            <Button
                android:id="@+id/edit_shopping_list"
                android:layout_gravity="center_vertical|right"
                android:text="@string/edit"
                android:width="50dp"
                android:layout_height="wrap_content"
                android:allowUndo="false"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="70dp" />
            <Button
                android:id="@+id/remove_shopping_list"
                android:layout_gravity="right|center_vertical"
                android:layout_alignParentBottom="true"
                android:text="@string/remove"
                android:width="50dp"
                android:layout_height="wrap_content"
                android:allowUndo="false"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="70dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/shopping_list_id"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:padding="5dp"/>

</LinearLayout>
